# vectopy

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  code_testing.py  pyproject.toml  requirements.txt
examples/: 01_basic_usage.py
vectopy/: __init__.py
vectopy/core/: __init__.py  _internals.py  algorithms.py  arrays.py  educational.py  function_base.py  statistics.py  time_series.py  transformations.py
vectopy/tests/: test_algorithms.py  test_arithmetics.py  test_array_creation.py  test_educational.py  test_statistics.py  test_time_series.py  test_transformations.py
